# peg_monadic_parsers

./: .gitignore  Makefile  README.md  peg-monadic-parsers.cabal
app/: Main.hs
examples/: anbn.peg  anbncn.peg  balanced_parentheses.peg  email_like.peg  hex_color.peg  identifier.peg  ipv4_like.peg  iso_date_like.peg  not_anbn.peg  number.peg  simple_expression.peg  url_like.peg
report/: PEG_Monadic_Parsers_Report.md
src/PEG/: AST.hs  Codegen.hs  GrammarParser.hs  Matcher.hs  Runtime.hs  Validator.hs
test/: Spec.hs
