cabal-version:      3.0
name:               peg-monadic-parsers
version:            0.1.0.0
synopsis:           PEG membership checker implemented through monadic parser combinators
description:
  Course project for checking whether an input string belongs to the language
  described by a PEG grammar.  The grammar is parsed into an AST, validated, and
  compiled into monadic parser combinators with packrat memoization.
category:           Parsing
maintainer:         Course project submission
license:            MIT
build-type:         Simple
extra-doc-files:    README.md

common warnings
  ghc-options:      -Wall -Wcompat

library
  import:           warnings
  exposed-modules:  PEG.AST
                  , PEG.GrammarParser
                  , PEG.Validator
                  , PEG.Runtime
                  , PEG.Matcher
                  , PEG.Codegen
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:    base >= 4.14 && < 5
                  , containers >= 0.6 && < 0.9
                  , parsec >= 3.1 && < 3.2

executable peg-check
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  build-depends:    base >= 4.14 && < 5
                  , peg-monadic-parsers

test-suite peg-monadic-parsers-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    base >= 4.14 && < 5
                  , peg-monadic-parsers
